다음단계 버튼 링크 수정

--- a/signup/signup2.html
+++ b/signup/signup2.html
@@ -81,7 +81,7 @@
         <input type="radio" name="terms1" checked>
         약관에 동의하지 않습니다.
     </label>
-    <button type="submit" class="next-btn">다음 단계</button>
+    <button type="submit" class="next-btn"><a href="signup3.html" class="next-btn">다음 단계</a></button>
     </div>
 </body>
 </html>
