--- a/googleform/googleform.html
+++ b/googleform/googleform.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="" method="">
+    <form action="" method="post">
     <header>
         <h1>나와 잘 맞는 회사는?</h1>
         <p>가고 싶은 회사에 대한 호감도를 조사합니다. 아이고 의미 없다~</p>
