--- a/lioncal/cal.html
+++ b/lioncal/cal.html
@@ -19,7 +19,7 @@
                     </div>
                 </div>
             </caption>
-            <colgroup>
+            <!-- <colgroup>
                 <col style="width:
                 5%">
                 <col style="width:
@@ -62,7 +62,7 @@
                 5%">
                 <col style="width:
                 5%">
-            </colgroup>
+            </colgroup> -->
             <tbody>
                 <tr class="month">
                     <th colspan="7">1</th>
@@ -91,6 +91,7 @@
                     <td>THU</td>
                     <td>FRI</td>
                     <td>SAT</td>
+
                 </tr>
                 <tr class="date">
                     <td></td>
@@ -99,21 +100,22 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td>1</td>
+                    <td class="holiday">1</td>
                     <td></td>
                     <td></td>
-                    <td>1</td>
-                    <td>2</td>
+                    <td class="holiday">1</td>
+                    <td class="holiday">2</td>
                     <td>3</td>
                     <td>4</td>
                     <td>5</td>
                     <td></td>
                     <td></td>
-                    <td>1</td>
+                    <td class="holiday">1</td>
                     <td>2</td>
                     <td>3</td>
                     <td>4</td>
                     <td>5</td>
+                    
                 </tr>
             </tbody>
             <tr class="date">
@@ -208,6 +210,7 @@
                 <td></td>
                 <td></td>
             </tr>
+            
             <tr class="month">
                 <th colspan="7">4</th>
                 <th colspan="7">5</th>
@@ -248,13 +251,13 @@
                 <td>2</td>
                 <td>3</td>
                 <td>4</td>
-                <td>5</td>
+                <td class="holiday">5</td>
                 <td>6</td>
                 <td>7</td>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>1</td>
+                <td class="holiday">1</td>
                 <td>2</td>
                 <td>3</td>
                 <td>4</td>
