--- a/lioncal/cal.html
+++ b/lioncal/cal.html
@@ -222,7 +222,9 @@
                 <td></td>
                 <td></td>
             </tr>
-            
+            <tr>
+                <td colspan="23"></td>
+            </tr>
             <tr class="month">
                 <th colspan="7">4</th>
                 <th></th>
@@ -380,6 +382,9 @@
             <td>30</td>
             <td></td>
             <td></td>
+        </tr>
+        <tr>
+            <td colspan="23"></td>
         </tr>
         <tr class="month">
             <th colspan="7">7</th>
