캐릭터 얼굴 초안

--- a/천하제일캐릭터/index.html
+++ b/천하제일캐릭터/index.html
@@ -8,13 +8,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="center">
-        <div class="char">
+    <h1 class="title">
+        눈엔 불을 켜고 귀는 쪼옹긋-!
+    </h1>
+    <div class="wrapper">
+        <div class="head">
+            <!-- <div class="ear left"></div> -->
+            <div class="face">
+                <div class="hair"></div>
+                <div class="ear left"></div>
+                <div class="ear right"></div>
+                <div class="eyebrow left"></div>
+                <div class="eyebrow right"></div>
+                <div class="eye left">
+                    <div class="iris left">
+                        <div class="pupil left">
+                            <div class="pupil-light left"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="eye right">
+                    <div class="iris right">
+                        <div class="pupil right">
+                            <div class="pupil-light right"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nose"></div>
+                <div class="mouth left"></div>
+                <div class="mouth right"></div>
+                <div class="whiskers left">
+                    <div class="whisker top"></div>
+                    <div class="whisker bottom"></div>
+                </div>
+                <div class="whiskers right">
+                    <div class="whisker top"></div>
+                    <div class="whisker bottom"></div>
+                </div>
 
+            </div>
+            <!-- <div class="ear right"></div> -->
         </div>
-        <h1 class="title">
-            눈엔 불을 켜고 귀는 쪼옹긋-!
-        </h1>
     </div>
 </body>
 </html>
