귀와 수염 완성

--- a/천하제일캐릭터/index.html
+++ b/천하제일캐릭터/index.html
@@ -16,8 +16,12 @@
             <!-- <div class="ear left"></div> -->
             <div class="face">
                 <div class="hair"></div>
-                <div class="ear left"></div>
-                <div class="ear right"></div>
+                <div class="ear left">
+                </div>
+                <div class="ear-inner left"></div>
+                <div class="ear right">
+                </div>
+                <div class="ear-inner right"></div>
                 <div class="eyebrow left"></div>
                 <div class="eyebrow right"></div>
                 <div class="eye left">
@@ -37,14 +41,12 @@
                 <div class="nose"></div>
                 <div class="mouth left"></div>
                 <div class="mouth right"></div>
-                <div class="whiskers left">
-                    <div class="whisker top"></div>
-                    <div class="whisker bottom"></div>
+                <div class="whiskers left-top">
                 </div>
-                <div class="whiskers right">
-                    <div class="whisker top"></div>
-                    <div class="whisker bottom"></div>
+                <div class="whiskers left-bottom"></div>
+                <div class="whiskers right-top">
                 </div>
+                <div class="whiskers right-bottom">
 
             </div>
             <!-- <div class="ear right"></div> -->
