--- a/천하제일캐릭터/index.html
+++ b/천하제일캐릭터/index.html
@@ -9,48 +9,43 @@
 </head>
 <body>
     <h1 class="title">
-        눈엔 불을 켜고 귀는 쪼옹긋-!
+        BABY LION
     </h1>
-    <div class="wrapper">
-        <div class="head">
-            <!-- <div class="ear left"></div> -->
-            <div class="face">
-                <div class="hair"></div>
-                <div class="ear left">
+    <div class="lioncap"></div>
+    <div class="face">
+        <div class="ear left"></div>
+        <div class="ear-inner left"></div>
+        <div class="ear right"></div>
+        <div class="ear-inner right"></div>
+        <div class="eyebrow left"></div>
+        <div class="eyebrow right"></div>
+        <div class="eye left">
+            <div class="iris left">
+                <div class="pupil left">
+                    <div class="pupil-light left"></div>
                 </div>
-                <div class="ear-inner left"></div>
-                <div class="ear right">
-                </div>
-                <div class="ear-inner right"></div>
-                <div class="eyebrow left"></div>
-                <div class="eyebrow right"></div>
-                <div class="eye left">
-                    <div class="iris left">
-                        <div class="pupil left">
-                            <div class="pupil-light left"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="eye right">
-                    <div class="iris right">
-                        <div class="pupil right">
-                            <div class="pupil-light right"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="nose"></div>
-                <div class="mouth left"></div>
-                <div class="mouth right"></div>
-                <div class="whiskers left-top">
-                </div>
-                <div class="whiskers left-bottom"></div>
-                <div class="whiskers right-top">
-                </div>
-                <div class="whiskers right-bottom">
-
             </div>
-            <!-- <div class="ear right"></div> -->
+            </div>
+        <div class="eye right">
+            <div class="iris right">
+                <div class="pupil right">
+                    <div class="pupil-light right"></div>
+                </div>
+            </div>
         </div>
+        <div class="nose"></div>
+        <div class="mouth left"></div>
+        <div class="mouth right"></div>
+        <div class="whiskers left-top"></div>
+        <div class="whiskers left-bottom"></div>
+        <div class="whiskers right-top"></div>
+        <div class="whiskers right-bottom"></div>
     </div>
+    <div class="tail">
+        <div class="tail-head"></div>
+        <div class="tail-curved"></div>
+    </div>
+    <div class="paw left"></div>
+    <div class="paw right"></div>
 </body>
 </html>
