꼬리 위치 조정

--- a/천하제일캐릭터/index.html
+++ b/천하제일캐릭터/index.html
@@ -11,6 +11,7 @@
     <h1 class="title">
         BABY LION
     </h1>
+    <!-- <div class="babylion"> -->
         <div class="lioncap">
             <div class="face">
                 <div class="ear left"></div>
@@ -41,10 +42,11 @@
                 <div class="whiskers right-top"></div>
                 <div class="whiskers right-bottom"></div>
             </div>
+            <div class="tail">
+                <div class="tail-head"></div>
+                <div class="tail-curved"></div>
+            </div>
         </div>
-        <div class="tail">
-            <div class="tail-head"></div>
-            <div class="tail-curved"></div>
-        </div>
+    <!-- </div> -->
 </body>
 </html>
