--- a/천하제일캐릭터/index.html
+++ b/천하제일캐릭터/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>천하제일 캐릭터 - 조다희</title>
+    <title>Baby Lion</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
