상세 위치 수정, 폰트 적용

--- a/구현실습/로그인popup/login-modal.html
+++ b/구현실습/로그인popup/login-modal.html
@@ -22,7 +22,7 @@
                 <label for="pw"></label>
                 <input id="pw" type="text" placeholder="비밀번호">
                 <p class="hidden">아이디 혹은 비밀번호가 일치하지 않습니다.</p>
-                <button class="staying-unchecked">로그인 상태 유지</button>
+                <button type="button" class="staying-unchecked"></button>
                 <a href="#none" class="login-btn">로그인</a>
             </form>
             <div class="other-opts">
