--- a/구현실습/로그인popup/loginpop.html
+++ b/구현실습/로그인popup/loginpop.html
@@ -11,7 +11,7 @@
     <article class="box">
         <img src="weniv-logo (1).svg" alt="">
         <p class="greeting">위니브를 더 즐겁고 편리하게 이용하세요.</p>
-        <button class="login-btn">로그인</button>
+        <a href="login-modal.html"class="login-btn">로그인</a>
     </article>
 </body>
 </html>
