--- a/구현실습/로그인popup/login-modal.html
+++ b/구현실습/로그인popup/login-modal.html
@@ -17,10 +17,10 @@
             <h2 class="login-greet">위니브에서 여러분의 궁금증을 해결하세요! :)</h2>
             <form action="" method="post">
                 <label for="id"></label>
-                <input id="id" type="text" placeholder="아이디">
+                <input id="id" type="text" placeholder="아이디" required>
                 <p class="hidden">아이디를 입력해주세요.</p>
                 <label for="pw"></label>
-                <input id="pw" type="text" placeholder="비밀번호">
+                <input id="pw" type="text" placeholder="비밀번호" required>
                 <p class="hidden">아이디 혹은 비밀번호가 일치하지 않습니다.</p>
                 <button type="button" class="staying-unchecked"></button>
                 <a href="#none" class="login-btn">로그인</a>
