파일 이름 변경

--- a/구현실습/로그인모달/login-modal.html
+++ b/구현실습/로그인모달/login-modal.html
@@ -20,7 +20,7 @@
                 <input id="id" type="text" placeholder="아이디" required>
                 <p class="hidden">아이디를 입력해주세요.</p>
                 <label for="pw"></label>
-                <input id="pw" type="text" placeholder="비밀번호" required>
+                <input id="pw" type="password" placeholder="비밀번호" required>
                 <p class="hidden">아이디 혹은 비밀번호가 일치하지 않습니다.</p>
                 <button type="button" class="staying-unchecked"></button>
                 <a href="#none" class="login-btn">로그인</a>
