--- a/구현실습/로그인모달/loginpop.html
+++ b/구현실습/로그인모달/loginpop.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <article class="box">
-        <img src="weniv-logo (1).svg" alt="">
+        <img src="weniv-logo (1).svg" alt="위니브로고">
         <p class="greeting">위니브를 더 즐겁고 편리하게 이용하세요.</p>
         <a href="login-modal.html"class="login-btn">로그인</a>
     </article>
