--- a/구현실습/드롭박스/index.html
+++ b/구현실습/드롭박스/index.html
@@ -8,35 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <!-- <select class="lang">
-            <option value="none">최애 프로그래밍 언어</option>
-            <option value="python">Python</option>
-            <option value="java">Java</option>
-            <option value="javascript">JavaScript</option>
-            <option value="c#">C#</option>
-            <option value="c-c++">C/C++</option>
-        </select> -->
-        <div class="one">
-            <div class="select-box">
-                <p class="default-value">최애 프로그래밍 언어</p>
-                <img src="Polygon 1.svg" alt="드롭박스 아래로 내리기">
-            </div>
-            <div class="dropbox hidden"></div>
-        </div>
-        <div class="two">
-            <div class="select-box shadow">
-                <p class="default-value">최애 프로그래밍 언어</p>
-                <img src="polygonup.svg" alt="드롭박스 위로 올리기">
-            </div>
-            <ul class="dropbox">
-                <li class="item">Python</li>
-                <li class="item">Java</li>
-                <li class="item">JavaScript</li>
-                <li class="item">C#</li>
-                <li class="item">C/C++</li>
-            </ul>
-        </div>
-    </div>
+    <article class="container">
+        <h2 class="txt-hide">최애 프로그래밍 언어를 선택해 주세요.</h2>
+        <button class="select-box txt-ellipsis on" type="button">최애 프로그래밍 언어</button>
+        <ul class="dropbox">
+            <li><button type="button" class="txt-ellipsis">Python</button></li>
+            <li><button type="button" class="txt-ellipsis">Java</button></li>
+            <li><button type="button" class="txt-ellipsis">JavaScript</button></li>
+            <li><button type="button" class="txt-ellipsis">C#</button></li>
+            <li><button type="button" class="txt-ellipsis">C/C++</button></li>
+        </ul>
+    </article>
 </body>
 </html>
