--- a/구현실습/드롭박스/index.html
+++ b/구현실습/드롭박스/index.html
@@ -10,14 +10,15 @@
 <body>
     <article class="container">
         <h2 class="txt-hide">최애 프로그래밍 언어를 선택해 주세요.</h2>
-        <button class="select-box txt-ellipsis on" type="button">최애 프로그래밍 언어</button>
+        <button class="select-box txt-ellipsis" type="button">최애 프로그래밍 언어</button>
         <ul class="dropbox">
-            <li><button type="button" class="txt-ellipsis">Python</button></li>
-            <li><button type="button" class="txt-ellipsis">Java</button></li>
-            <li><button type="button" class="txt-ellipsis">JavaScript</button></li>
-            <li><button type="button" class="txt-ellipsis">C#</button></li>
-            <li><button type="button" class="txt-ellipsis">C/C++</button></li>
+            <li><button type="button" class="dropbox-opt txt-ellipsis">Python</button></li>
+            <li><button type="button" class="dropbox-opt txt-ellipsis">Java</button></li>
+            <li><button type="button" class="dropbox-opt txt-ellipsis">JavaScript</button></li>
+            <li><button type="button" class="dropbox-opt txt-ellipsis">C#</button></li>
+            <li><button type="button" class="dropbox-opt txt-ellipsis">C/C++</button></li>
         </ul>
     </article>
+    <script src="./index.js"></script>
 </body>
 </html>
