버튼 기능 추가

--- a/carousel/index.html
+++ b/carousel/index.html
@@ -61,7 +61,13 @@
             }
         })
 
-    
+        stopBtn.addEventListener('click', function (){
+            center.classList.add('paused')
+        })
+
+        repBtn.addEventListener('click', function(){
+            center.classList.remove('paused')
+        })
 
     </script>
 </body>
