--- a/todolist/index.html
+++ b/todolist/index.html
@@ -17,9 +17,6 @@
                 <ul class="todos">
                     <li>
                         <h4>호박 만들기</h4>
-                        <img src="images/icon-close.png" alt=" " class="hobak" style="width: 30px;
-                        height: 30px;">
-                    </li>
                     <li>
                         <h4>TIL 기록하기</h4>
                     </li>
@@ -30,6 +27,10 @@
                         <h4>깃헙 커밋하기</h4>
                     </li>
                 </ul>
+
+                <script>
+
+                </script>
             </section>
         </div>
     </body>
